deixando responsivo e adicionando scrollbar personalizada, consertando bug de fuso horario na chamada dos dados de previsao 24h

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -25,7 +25,7 @@ main {
     padding: 2rem;
     border-radius: 5px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
-    width: 22%;
+    width: 26.5%;
 }
 
 #search {
@@ -133,11 +133,17 @@ sup {
 
 #carousel {
     display: flex;
-    margin-top: 1rem;
-    overflow-x: auto;
+    overflow-x: scroll;
     scroll-snap-type: x mandatory;
     gap: 10px;
     padding: 10px 0;
+    scroll-behavior: smooth;
+    scrollbar-color: #4a7dff transparent;
+}
+
+#carousel::-webkit-scrollbar-thumb {
+    background: linear-gradient(90deg, #4a7dff, #00c6ff);
+    border-radius: 10px;
 }
 
 .carousel-item {
@@ -165,3 +171,114 @@ sup {
     font-size: 14px;
     color: #666;
 }
+
+.next-hours-div {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    gap: 5px;
+}
+
+.next-hours-div>i {
+    font-size: 20px;
+}
+
+
+
+@media screen and (max-width: 1580px){
+    #container {
+        width: 32%;
+    }
+}
+
+@media screen and (max-width: 1305px){
+    #container {
+        width: 39%;
+    }
+}
+
+@media screen and (max-width: 1070px){
+    #container {
+        width: 48%;
+    }
+}
+
+@media screen and (max-width: 870px){
+    #container {
+        width: 59%;
+    }
+}
+
+@media screen and (max-width: 710px){
+    #container {
+        width: 72%;
+    }
+}
+
+@media screen and (max-width: 460px){
+    #container {
+        width: 96%;
+    }
+}
+
+@media screen and (max-height: 680px){
+    main {
+        align-items: flex-start;
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-height: 590px) {
+    main {
+        align-items: flex-start;
+        overflow-y: auto;
+        margin-top: 10px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    #container {
+        padding: 0.5rem 1rem 0.5rem 1rem;
+    }
+
+    #temp {
+        padding: 10px;
+    }
+
+    #temp-value,
+    sup {
+        font-size: 18px;
+    }
+
+    #temp img {
+        width: 50px;
+        height: 50px;
+    }
+
+    #other-infos .info h2 {
+        font-size: 12px;
+    }
+
+    .carousel-item {
+        min-width: 60px;
+        padding: 5px;
+    }
+
+    .carousel-item img {
+        height: 30px;
+        width: 30px;
+    }
+
+    .hour {
+        font-size: 13px;
+    }
+
+    .hour-temp {
+        font-size: 12px;
+    }
+}
+
+
